<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_tile">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="about_label">About</string>
    <string name="new_game_label">New Game</string>
    <string name="exit_label">Exit</string>
    
    <string name="about_title">About Android Sudoku</string>    
    <string name="about_text">\
        Suduko is a ancient game. Starting with a partially
        completed 9*9 grids, the objective is to fill the 
        grid so that each row, each column, and each of the
        3*3 boxes cotains the digits 1 to 9 exactly once</string>

    <string name="settings_label">Settings...</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Diffculty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
      
    
</resources>




