<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/background"
    android:padding="30dip">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="center">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/main_tile" 
	        android:layout_gravity="center"
	        android:layout_marginBottom="15dip"
	        android:textSize="24.5sp"/>
	    <Button
	        android:id="@+id/continue_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/continue_label" 
	        />
	    <Button
	        android:id="@+id/new_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/new_game_label" />
	    <Button
	        android:id="@+id/about_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_label" />
	    <Button
	        android:id="@+id/exit_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/exit_label" />
	        
        
    </LinearLayout>
</LinearLayout>
